--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Hamish Williams",
-  "name": "Design Portfolio of Hamish Williams",
+  "short_name": "$BOPE",
+  "name": "Designing the future of house",
   "icons": [
     {
       "src": "favicon.png",
